<?xml version="1.0" encoding="utf-8"?>
<resources>
<!--基础信息-->
    <string name="app_name">土地合同保存系统</string>
<!--登录页面-->
    <string name="login_title">用户登录</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="link_register">还没有账号？立即注册</string>
    <string name="link_forgot_password">忘记密码？</string>
    <string name="error_login">账号或者密码错误</string>
<!--启动页面-->
    <string name="app_logo">应用图标</string>
    <string name="app_version">版本 1.0.0</string>
</resources>